log
Fri 19 Aug 2022 12:28:22 PM UTC: 
 tests:  0|6
total_score: 0/70
ded577b
Fri 19 Aug 2022 12:43:49 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
73795e9
Fri 19 Aug 2022 12:49:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e7d7508
Fri 19 Aug 2022 12:49:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
afce58d
Fri 19 Aug 2022 01:07:57 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3d0723b
Fri 19 Aug 2022 01:09:25 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
899cc74
